<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/fondol">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_Password"
        android:id="@+id/idContraseñaLogin"
        android:textColor="@android:color/white"
        android:typeface="sans"
        android:textSize="30sp"
        android:layout_below="@+id/idTextUsuario"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_Usuario"
        android:id="@+id/idUsuarioLogin"
        android:textColor="@android:color/white"
        android:layout_marginTop="82dp"
        android:typeface="sans"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idTextUsuario"
        android:layout_below="@+id/idUsuarioLogin"
        android:layout_alignParentEnd="true"
        android:background="@android:color/white"
        android:typeface="sans"
        android:textSize="30sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/idTextContraseña"
        android:layout_below="@+id/idContraseñaLogin"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:typeface="sans"
        android:textSize="30sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_Ingresar"
        android:id="@+id/idBotonIngresar"
        android:typeface="sans"
        android:textSize="30sp"
        android:layout_below="@+id/idTextContraseña"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_SinRegistro"
        android:id="@+id/idSinRegistro"
        android:textColor="@android:color/white"
        android:typeface="sans"
        android:textSize="30sp"
        android:layout_above="@+id/idRegistroAdmin"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70sp"
        android:text="@string/str_RegistroAdministrador"
        android:id="@+id/idRegistroAdmin"
        android:typeface="sans"
        android:textSize="30sp"
        android:layout_above="@+id/idRegistroUsuario"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70sp"
        android:text="@string/str_RegistroUsuario"
        android:id="@+id/idRegistroUsuario"
        android:typeface="sans"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
