<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.johnj_000.rapidturns.RegistroAdministrador"
    android:background="@drawable/fondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_Usuario"
        android:id="@+id/idUsuario"
        android:typeface="sans"
        android:textSize="30sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idTextUsuario"
        android:background="@android:color/white"
        android:typeface="sans"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_Password"
        android:id="@+id/idPassword"
        android:typeface="sans"
        android:textSize="30sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/idTextPassword"
        android:background="@android:color/white"
        android:typeface="sans"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_ConfirmarContraseña"
        android:id="@+id/idConfirmacion"
        android:typeface="sans"
        android:textSize="30sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/idTextConfirmacion"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"
        android:typeface="sans"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_NombreEmpresa"
        android:id="@+id/idNombreEmpresa"
        android:typeface="sans"
        android:textSize="30sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idTextNombreEmpresa"
        android:background="@android:color/white"
        android:typeface="sans"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_DireccionEmpresa"
        android:id="@+id/idDireccionEmpresa"
        android:typeface="sans"
        android:textSize="30sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idTextDireccionEmpresa"
        android:background="@android:color/white"
        android:typeface="sans"
        android:textSize="30sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_Registrarme"
        android:id="@+id/idRegistrarme"
        android:typeface="sans"
        android:textSize="30sp"/>

</LinearLayout>
